--- a/package.json
+++ b/package.json
@@ -1,44 +1,46 @@
 {
-    "name": "@uniswap/overlay-v1-sdk",
-    "license": "MIT",
-    "publishConfig": {
-      "access": "public"
-    },
-    "version": "3.5.1",
-    "description": "⚒️ An SDK for building applications on top of OverlayV1",
-    "main": "dist/index.js",
-    "typings": "dist/index.d.ts",
-    "files": [
-      "dist"
-    ],
-    "repository": "https://github.com/overlay-market/overlay-v1-sdk",
-    "keywords": [
-      "uniswap",
-      "ethereum"
-    ],
-    "module": "dist/overlay-v1-sdk.esm.js",
-    "scripts": {
-      "build": "tsdx build",
-      "start": "tsdx watch",
-      "test": "tsdx test",
-      "prepublishOnly": "tsdx build"
-    },
-    "dependencies": {
-      "@ethersproject/abi": "^5.0.12",
-      "@ethersproject/solidity": "^5.0.9",
-      "tiny-invariant": "^1.1.0",
-      "tiny-warning": "^1.0.3"
-    },
-    "devDependencies": {
-      "@types/jest": "^24.0.25",
-      "tsdx": "^0.14.1"
-    },
-    "engines": {
-      "node": ">=10"
-    },
-    "prettier": {
-      "printWidth": 120,
-      "semi": false,
-      "singleQuote": true
-    }
+  "name": "@uniswap/overlay-v1-sdk",
+  "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
+  "version": "3.5.1",
+  "description": "⚒️ An SDK for building applications on top of OverlayV1",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "repository": "https://github.com/overlay-market/overlay-v1-sdk",
+  "keywords": [
+    "uniswap",
+    "ethereum"
+  ],
+  "module": "dist/overlay-v1-sdk.esm.js",
+  "scripts": {
+    "build": "tsdx build",
+    "start": "tsdx watch",
+    "test": "tsdx test",
+    "prepublishOnly": "tsdx build"
+  },
+  "dependencies": {
+    "@ethersproject/abi": "^5.0.12",
+    "@ethersproject/solidity": "^5.0.9",
+    "@types/big.js": "^6.1.2",
+    "big.js": "^6.1.1",
+    "tiny-invariant": "^1.1.0",
+    "tiny-warning": "^1.0.3"
+  },
+  "devDependencies": {
+    "@types/jest": "^24.0.25",
+    "tsdx": "^0.14.1"
+  },
+  "engines": {
+    "node": ">=10"
+  },
+  "prettier": {
+    "printWidth": 120,
+    "semi": false,
+    "singleQuote": true
   }
+}
