--- a/.npmignore
+++ b/.npmignore
@@ -1,3 +1,5 @@
+.gitignore
+
 # Logs
 logs
 *.log
@@ -25,9 +27,18 @@ coverage
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
+# Dependency directories
+node_modules/
+jspm_packages/
+
 # TypeScript cache
 *.tsbuildinfo
 
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
 
 # Optional REPL history
 .node_repl_history
