--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@ethersproject/abi": "^5.0.12",
+    "@ethersproject/bignumber": "^5.5.0",
     "@ethersproject/solidity": "^5.0.9",
     "big.js": "^6.1.1",
     "tiny-invariant": "^1.1.0",
