--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# build output
+# build
 dist
 
 # Logs
@@ -64,3 +64,5 @@ jspm_packages/
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+.npmignore
