--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "⚒️ An SDK for building applications on top of OverlayV1",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@ethersproject/abi": "^5.0.12",
+    "@ethersproject/bignumber": "^5.5.0",
     "@ethersproject/solidity": "^5.0.9",
     "big.js": "^6.1.1",
     "tiny-invariant": "^1.1.0",
